--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/isands
 spring.datasource.username=testUser
 spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
