sql scripts added, controller open-api-doc corrected, liquibase has been added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/isands
 spring.datasource.username=testUser
 spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=update
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+spring.jpa.hibernate.ddl-auto=validate
