--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
             <version>3.12.4</version>
             <scope>test</scope>
         </dependency>
+
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
